# Deepeye

./: .gitignore  .zenodo.json  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  EyeDiseases.py  INSTRUCTIONS_PIPELINE_1.md  LICENSE  README.md  README_old.md  Test.py  _version.py  analysisFunctions.py  eyeDiseasesClassifier.py  files2MeanSTD.py  labelCreator.py  pyproject.toml  requirements.txt  retinaAnalysis.py  sms.md  tox.ini
.github/workflows/: ci.yml  dist.yml  security.yml
CNN_Classifier/: TestSingleImage_multiclassifier.py  Testset_binaryclassifier.py  Testset_multiclassifier.py  Training_binaryclassifier.py  Training_multiclassifier.py  __init__.py
LayersSegmenter/: __init__.py  json _mask_reading.ipynb  layers2one.py  multiclass_segmentation.ipynb  player_Stage1.py  player_Stage1New.py  simple9LCreator.py
OCT-Retinal-Disease-Classifier/: AbsolutePath.py  Test_singleimage_multiclassifier.py  Testset_binaryclassifier.py  Testset_multiclassifier.py  Training_binaryclassifier.py  Training_multiclassifier.py  __init__.py
OCT-Retinal-Finding-Classifier/: main_code.py  multiclassClassifier.ipynb  sequentialNet.py
OCT-Retinal-Layer-Segmenter/: blobDetector.py  json _mask_reading.ipynb  labels.json  multiclass_segmentation.ipynb  player.py  player_Stage1.py
OCT-Retinal-Layer-Segmenter/COCO_labels/: FINAL1-10C.json  FINAL61-70C.json  FINAL71-80C.json  FINAL81-90C.json  FINAL91-100C.json  final 11-20C.json  final21-30C.json  final31-40C.json  final41-50C.json  final51-60C.json
Playground/: blobDetector.py  layers2one.py  player.py  simple_unet3models.py
Playground/FindingsClassifier/: README.md  multiclassClassifier.ipynb  sequentialNet.py
Playground/diseasesClassifier/: eyeDiseasesClassifier.py
Playground/layersSegmenter/: analysisFunctions.py
binaryResearch/: README.md  ccnTrain.py  cnnTest.py  copyTrainTestToDirs.py  splitNamesTrainTest.py
densenetClassifier/: .env  DenseNet_Model.ipynb  __init__.py  analysisFunctions.py  dataClasses.py  helperFunctions.py  player_Stage2.py  util.py
diseasesClassifier/: eyeDiseasesClassifier.py  labelCreator.py  model.pth  testPyTorch
docs/source/: api.rst  conf.py  index.rst  usage.rst
fileSorter/: fileSorter.py  fileSorterBinary.py  fileSorterCNN_Dense.py  tetrLists.ipynb
layersSegmenter/: boundsLabeling.py  imageCleaning.py  retinaAnalysis.py
requirements/: build.txt  dev.txt  docs.txt  prd.txt  test.txt
tests/: test_util.py
