[project]
name = "deepeye"
dynamic = ["version"]
authors = [
    {name = "DeepEye project at Health Research Institute"},
]
description = "DeepEye project"
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.5",
    "pillow",
    "opencv-python",
    "scikit-learn",
    "matplotlib",
    "tensorflow<=2.17.0",
    "torch",
    "torchvision",
    "python-dotenv",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "build",
    "httpx",
    "pytest",
    "pytest-cov",
    "ruff",
    "setuptools>=61.2",
    "setuptools_scm[toml]>=8.0",
    "tox"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_book_theme",
    "sphinx-automodapi",
    "nbsphinx"
]

[project.urls]
homepage = "https://github.com/Health-Research-Institute/Deepeye"
documentation = "https://github.com/Health-Research-Institute/Deepeye"
repository = "https://github.com/Health-Research-Institute/Deepeye"

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["LayersSegmenter", "densenetClassifier", "CNN_Classifier"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "_version.py"

[tool.pytest.ini_options]
markers = [
    "allow_aliases: override setiings.EXPLORER_DATA_EXPORTERS_ALLOW_DATA_FILE_ALIAS (where applicable)",
    "media_root: override settings.MEDIA_ROOT (where applicable)",
    "include_data_files: override settings.EXPLORER_DATA_EXPORTERS_INCLUDE_DATA_FILES (where applicable)",
    "sql: specifiy SQL query (where applicable)"
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "migrations",
    "node_modules",
    "venv",
]
target-version = "py311"
